--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "event_registration_sys": "file:",
     "jsonwebtoken": "^9.0.2",
     "local": "^0.3.3",
     "passport": "^0.7.0",
